# micrograd-rs

./: .gitignore  Cargo.toml  README.md
src/: layer.rs  lstm.rs  main.rs  mlp.rs  neuron.rs  rnn.rs  value.rs
